fix: mobile edit button too small2

--- a/src/ABConverter/style/styles.scss
+++ b/src/ABConverter/style/styles.scss
@@ -124,10 +124,11 @@ html[data-theme="dark"] #app {
     display: none;
   }
 }
-// 手机/触屏端
+// 手机/触屏端 mobile
 @media (hover: none) and (pointer: coarse) {
   .edit-block-button.ab-button-1 { // 编辑按钮恒显示，要覆盖edit-block-button默认行为
     display: block !important;
+    z-index: 20;
   }
 }
 
